demo/styles.css
@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600|Satisfy');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    overflow: hidden;
}

.presentr {
    font-family: 'Montserrat';
    font-size: 1vw;
}

.presentr .progress {
    position: fixed;
    background: #ff4446;
    top: 0;
    left: 0;
    width: 0;
    height: 0.2vh;
    z-index: 1;
    transition: all 1s;
}

.slides {
    transition: all 0.6s;
}

.slides section {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    filter: grayscale(100%);
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
}

.slides section.next-slide {
    transform: translateX(100vw);
    transition: all 0.3s;
}

.slides section.current-slide {
    transition: all 0.3s;
    filter: none;
    transform: none;
}

.slides section.previous-slide {
    transition: all 0.3s;
    filter: none;
    transform: translateX(-100vw);
}

.slides section h2 {
    font-family: 'Satisfy';
    font-size: 8em;
    color: #ff4446;
    margin-bottom: 5vh;
}

.slides section h2,
.slides section.welcome h1 {
    text-shadow: 2px 2px 0 #862224;
}

.slides section.welcome .keyboard-shortcuts {
    text-align: center;
    color: rgba(0, 0, 0, 0.75);
    font-size: 1.3em;
}

.slides section.welcome .keyboard-shortcuts p {
    transform: translateY(-0.5vh);
    opacity: 0;
    margin: 0.3em 0;
    animation: normalize 0.7s ease forwards;
}

.slides section.welcome .keyboard-shortcuts p:nth-child(2) {
    animation-delay: 0.5s;
}

.slides section.welcome .keyboard-shortcuts b {
    font-weight: 600;
}

.slides section.welcome h1 {
    font-family: 'Satisfy';
    font-size: 10em;
    color: #ff4446;
}

.slides section.features .list {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.slides section.features .list p {
    color: rgba(0, 0, 0, 0.85);
    display: inline-block;
    position: relative;
    margin: 0.5em 0;
    padding: 0.3em 0.4em 0 0.4em;
    font-size: 2em;
    text-align: center;
}

.slides section.features .list p::before {
    position: absolute;
    content: '';
    bottom: -0.2em;
    left: 0;
    right: 0;
    margin: auto;
    width: 0;
    height: 100%;
    background: #ff4446;
    transition: all 0.5s;
    z-index: -1;
}

.slides section.features .list p.current-frag {
    color: white;
}

.slides section.features .list p.current-frag::before {
    width: 100%;
}

.slides section.setup .methods {
    display: flex;
    flex-direction: column;
}

.slides section.setup .methods .method {
    margin-bottom: 3em;
}

.slides section.setup .methods .method h3 {
    font-size: 1.5em;
    font-weight: 400;
    margin-bottom: 0.8em;
    color: rgba(0, 0, 0, 0.85);
}

.slides section.setup .methods .method code {
    background: #f6f8fa;
    padding: 0.8em 1.2em;
    transition: all 0.5s;
    border-bottom: 2px solid #f6f8fa;
}

.slides section.setup .methods .method.current-frag code {
    border-bottom: 2px solid #ff4446;
}

.slides section.github a {
    cursor: pointer;
    outline: none;
    text-decoration: none;
    background: #ff4446;
    color: white;
    font-size: 3em;
    padding: 0.8em 1.5em;
    box-shadow: 2px 2px 0 0 #862224,
    1px 1px 0 0 #862224;
    transition: all 0.3s;
}

.slides section.github a:hover {
    background: #d73b3d;
}

.slides section.current-slide {
    transform: none;
    filter: none;
}

.slides .frag {
    opacity: 0;
    transform: translateY(-0.5vh);
    transition: all 0.5s;
}

.slides .frag.active-frag {
    transform: none;
    opacity: 1;
}

@keyframes normalize {
    to {
        transform: none;
        opacity: 1;
    }
}

